# python-poetry-cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: main.py
